--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ section #landing {
   background-color: #f3f3f3;
 }
 
-#text {
+#landing #text {
   grid-area: 1/1/2/2;
   align-self: center;
   justify-self: center;
@@ -102,29 +102,29 @@ section #landing {
   margin-left: 5%;
 }
 
-#text p {
+#landing #text p {
   /* width: 600px; */
   font-size: 25px;
 }
 
-#text h1 {
+#landing #text h1 {
   width: 600px;
   font-size: 45px;
 }
 
-#text #about{
+#landing #text #about{
   width: 500px;
   font-size: 20px;
 }
 
-#img {
+#landing #img {
   /* background-color: #ffffff; */
   grid-area: 1/2/2/3;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-#img img {
+#landing #img img {
   width: 550px;
   animation: updown 3s linear infinite;
 }
@@ -189,7 +189,7 @@ section #landing {
   margin-right: 50px;
 }
 
-#skills .skill {
+.carousel #skills .skill {
   position: relative;
   top: 50%;
   transform: translateY(-50%);
@@ -262,12 +262,12 @@ section #landing {
   margin: auto;
 }
 
-.topics .project {
+.projects .topics .project {
   text-align: center;
   margin: 20px;
 }
 
-.topics .project img {
+.projects .topics .project img {
   width: 500px;
   height: 300px;
   object-fit: fill;
@@ -276,7 +276,7 @@ section #landing {
 }
 
 
-.topics .project img:hover{
+.projects .topics .project img:hover{
   cursor: pointer;
   transform: scale(1.05);
   filter: brightness(70%);
